reset button createdd

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
                 Amon Ra
             </div>
             <div id="amonra-pic">
-                <img src="./resources/amonra.gif" alt="Amon Rá">	
+                <img src="./resources/amonra.gif" alt="Amon Ra">	
             </div>
-            <div id="amonra-time"></div>
+            <div id="amonra-time">1 Hora</div>
+            <button id="amonra-btn" class="btn btn-success" onclick="regenerateTimer('\amonra')">Reiniciar</button>
         </div><br>
         <div class="mvp-div">
             <div id="abelhaRainha-name">
@@ -30,9 +31,19 @@
             <div id="abelhaRainha-pic">
                 <img src="./resources/abelhaRainha.gif" alt="Abelha-Rainha">	
             </div>
-            <div id="abelhaRainha-time"></div>
-        </div>
-        </div>
+            <div id="abelhaRainha-time">2 Horas</div>
+            <button id="abelhaRainha-btn" class="btn btn-success" onclick="regenerateTimer('\abelhaRainha')">Reiniciar</button>
+        </div><br>
+        <div class="mvp-div">
+            <div id="amonraPesadelo-name">
+                Amon Ra do Pesadelo
+            </div>
+            <div id="amonraPesadelo-pic">
+                <img src="./resources/amonraPesadelo.gif" alt="Amon Ra do Pesadelo">	
+            </div>
+            <div id="amonraPesadelo-time">1 Hora</div>
+            <button id="amonraPesadelo-btn" class="btn btn-success" onclick="regenerateTimer('\amonraPesadelo')">Reiniciar</button>
+        </div><br>
 
     </body>
     <!-- JavaScript -->
