--- a/index.html
+++ b/index.html
@@ -14,35 +14,40 @@
     </head>
     
     <body>
-        <div class="mvp-div">
-            <div id="amonra-name">
-                Amon Ra
+        <div class="card">
+            <img class="card-img-top" src="./resources/amonra.gif" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Amon Ra</h5>
+              <p class="card-text" id="amonra-time">1 hora</p>
+              <div class="col-10">
+                <input class="form-control time-input" type="time" id="amonra-time-input">
             </div>
-            <div id="amonra-pic">
-                <img src="./resources/amonra.gif" alt="Amon Ra">	
-            </div>
-            <div id="amonra-time">1 Hora</div>
             <button id="amonra-btn" class="btn btn-success" onclick="regenerateTimer('\amonra')">Reiniciar</button>
+            </div>
         </div><br>
-        <div class="mvp-div">
-            <div id="abelhaRainha-name">
-                Abelha-Rainha
+
+        <div class="card">
+            <img class="card-img-top" src="./resources/abelhaRainha.gif" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Abelha-Rainha</h5>
+              <p class="card-text" id="abelhaRainha-time">1 hora</p>
+              <div class="col-10">
+                <input class="form-control time-input" type="time" id="abelhaRainha-time-input">
             </div>
-            <div id="abelhaRainha-pic">
-                <img src="./resources/abelhaRainha.gif" alt="Abelha-Rainha">	
-            </div>
-            <div id="abelhaRainha-time">2 Horas</div>
             <button id="abelhaRainha-btn" class="btn btn-success" onclick="regenerateTimer('\abelhaRainha')">Reiniciar</button>
+            </div>
         </div><br>
-        <div class="mvp-div">
-            <div id="amonraPesadelo-name">
-                Amon Ra do Pesadelo
+
+        <div class="card">
+            <img class="card-img-top" src="./resources/amonraPesadelo.gif" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Amon Ra do Pesadelo</h5>
+              <p class="card-text" id="amonraPesadelo-time">1 hora</p>
+              <div class="col-10">
+                <input class="form-control time-input" type="time" id="amonraPesadelo-time-input">
             </div>
-            <div id="amonraPesadelo-pic">
-                <img src="./resources/amonraPesadelo.gif" alt="Amon Ra do Pesadelo">	
-            </div>
-            <div id="amonraPesadelo-time">1 Hora</div>
             <button id="amonraPesadelo-btn" class="btn btn-success" onclick="regenerateTimer('\amonraPesadelo')">Reiniciar</button>
+            </div>
         </div><br>
 
     </body>
