--- a/index.html
+++ b/index.html
@@ -19,37 +19,164 @@
     <div class="main-div">
         <div class="card">
             <h5 class="card-title">Amon Ra</h5>
-            <img class="card-img-top" src="./resources/amonra.gif" alt="Card image cap width="150" height="150"">
-            <div class="card-body">
-                <p class="card-text" id="amonra-time">1 hora</p>
-                <input class="form-control time-input" type="time" id="amonra-time-input">
-                <button id="amonra-btn" class="btn btn-success" onclick="regenerateTimer('\amonra')">Reiniciar</button>
-            </div>
+            <img class="card-img-top" src="./resources/amonra.gif" alt="Card image cap width=" 150" height="150"">
+            <div class=" card-body">
+            <p class="card-text" id="amonra-time">1 hora</p>
+            <input class="form-control time-input" type="time" id="amonra-time-input">
+            <button id="amonra-btn" class="btn btn-success" onclick="regenerateTimer('\amonra')">Reiniciar</button>
         </div>
-
-        <div class="card">
-            <h5 class="card-title">Abelha-Rainha</h5>
-            <img class="card-img-top" src="./resources/abelhaRainha.gif" alt="Card image cap" width="7rem" height="150">
-            <div class="card-body">
-                <p class="card-text" id="abelhaRainha-time">2 horas</p>
-                <input class="form-control time-input" type="time" id="abelhaRainha-time-input">
-                <button id="abelhaRainha-btn" class="btn btn-success"
-                    onclick="regenerateTimer('\abelhaRainha')">Reiniciar</button>
+    </div>
+    <div>
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" id="mjolnir_04-tab" data-toggle="tab" href="#mjolnir_04" role="tab"
+                    aria-controls="mjolnir_04" aria-selected="true">mjolnir_04</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="gld_dun02-tab" data-toggle="tab" href="#gld_dun02" role="tab"
+                    aria-controls="gld_dun02" aria-selected="false">gld_dun02</a>
+            </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="mjolnir_04" role="tabpanel" aria-labelledby="mjolnir_04-tab">
+                <div class="card">
+                    <h5 class="card-title">Abelha-Rainha</h5>
+                    <img class="card-img-top" src="./resources/abelhaRainha.gif" alt="Card image cap" width="7rem"
+                        height="150">
+                    <div class="card-body">
+                        <p class="card-text" id="mjolnir_04-time">2 horas</p>
+                        <input class="form-control time-input" type="time" id="mjolnir_04-time-input">
+                        <button id="mjolnir_04-btn" class="btn btn-success"
+                            onclick="regenerateTimer('\mjolnir_04')">Reiniciar</button>
+                    </div>
+                </div>
             </div>
-        </div>
-
-        <div class="card">
-            <h5 class="card-title">Amon Ra do Pesadelo</h5>
-            <img class="card-img-top" src="./resources/amonraPesadelo.gif" alt="Card image cap" width="150" height="150">
-            <div class="card-body">
-                <p class="card-text" id="amonraPesadelo-time">1 hora</p>
-                <input class="form-control time-input" type="time" id="amonraPesadelo-time-input">
-                <button id="amonraPesadelo-btn" class="btn btn-success"
-                    onclick="regenerateTimer('\amonraPesadelo')">Reiniciar</button>
+            <div class="tab-pane fade" id="gld_dun02" role="tabpanel" aria-labelledby="gld_dun02-tab">
+                <div class="card">
+                    <h5 class="card-title">Abelha-Rainha</h5>
+                    <img class="card-img-top" src="./resources/abelhaRainha.gif" alt="Card image cap" width="7rem"
+                        height="150">
+                    <div class="card-body">
+                        <p class="card-text" id="gld_dun02-time">8 horas</p>
+                        <input class="form-control time-input" type="time" id="gld_dun02-time-input">
+                        <button id="gld_dun02-btn" class="btn btn-success"
+                            onclick="regenerateTimer('\gld_dun02')">Reiniciar</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    
+    <div class="card">
+        <h5 class="card-title">Amon Ra do Pesadelo</h5>
+        <img class="card-img-top" src="./resources/amonraPesadelo.gif" alt="Card image cap" width="150" height="150">
+        <div class="card-body">
+            <p class="card-text" id="amonraPesadelo-time">1 hora</p>
+            <input class="form-control time-input" type="time" id="amonraPesadelo-time-input">
+            <button id="amonraPesadelo-btn" class="btn btn-success"
+                onclick="regenerateTimer('\amonraPesadelo')">Reiniciar</button>
+        </div>
+    </div>
+    <div>
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" id="ra_fild03-tab" data-toggle="tab" href="#ra_fild03" role="tab"
+                    aria-controls="ra_fild03" aria-selected="true">ra_fild03</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="ra_fild04-tab" data-toggle="tab" href="#ra_fild04" role="tab"
+                    aria-controls="ra_fild04" aria-selected="false">ra_fild04</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="ve_fild01-tab" data-toggle="tab" href="#ve_fild01" role="tab"
+                    aria-controls="ve_fild01" aria-selected="false">ve_fild01</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="ve_fild02-tab" data-toggle="tab" href="#ve_fild02" role="tab"
+                    aria-controls="ve_fild02" aria-selected="false">ve_fild02</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="gld_dun03_2-tab" data-toggle="tab" href="#gld_dun03_2" role="tab"
+                    aria-controls="gld_dun03_2" aria-selected="false">gld_dun03_2</a>
+            </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="ra_fild03" role="tabpanel" aria-labelledby="ra_fild03-tab">
+                <div class="card">
+                    <h5 class="card-title">Atroce</h5>
+                    <img class="card-img-top" src="./resources/atroce.gif" alt="Card image cap" width="150"
+                        height="150">
+                    <div class="card-body">
+                        <p class="card-text" id="ra_fild03-time">3 horas</p>
+                        <input class="form-control time-input" type="time" id="ra_fild03-time-input">
+                        <button id="ra_fild03-btn" class="btn btn-success"
+                            onclick="regenerateTimer('ra_fild03')">Reiniciar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane fade" id="ra_fild04" role="tabpanel" aria-labelledby="ra_fild04-tab">
+                <div class="card">
+                    <h5 class="card-title">Atroce</h5>
+                    <img class="card-img-top" src="./resources/atroce.gif" alt="Card image cap" width="150"
+                        height="150">
+                    <div class="card-body">
+                        <p class="card-text" id="ra_fild04-time">5 horas</p>
+                        <input class="form-control time-input" type="time" id="ra_fild04-time-input">
+                        <button id="ra_fild04-btn" class="btn btn-success"
+                            onclick="regenerateTimer('ra_fild04')">Reiniciar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane fade" id="ve_fild01" role="tabpanel" aria-labelledby="ve_fild01-tab">
+                <div class="card">
+                    <h5 class="card-title">Atroce</h5>
+                    <img class="card-img-top" src="./resources/atroce.gif" alt="Card image cap" width="150"
+                        height="150">
+                    <div class="card-body">
+                        <p class="card-text" id="ve_fild01-time">3 horas</p>
+                        <input class="form-control time-input" type="time" id="ve_fild01-time-input">
+                        <button id="ve_fild01-btn" class="btn btn-success"
+                            onclick="regenerateTimer('ve_fild01')">Reiniciar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane fade" id="ve_fild02" role="tabpanel" aria-labelledby="ve_fild02-tab">
+                <div class="card">
+                    <h5 class="card-title">Atroce</h5>
+                    <img class="card-img-top" src="./resources/atroce.gif" alt="Card image cap" width="150"
+                        height="150">
+                    <div class="card-body">
+                        <p class="card-text" id="ve_fild02-time">6 horas</p>
+                        <input class="form-control time-input" type="time" id="ve_fild02-time-input">
+                        <button id="ve_fild02-btn" class="btn btn-success"
+                            onclick="regenerateTimer('ve_fild02')">Reiniciar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane fade" id="gld_dun03_2" role="tabpanel" aria-labelledby="gld_dun03_2-tab">
+                <div class="card">
+                    <h5 class="card-title">Atroce</h5>
+                    <img class="card-img-top" src="./resources/atroce.gif" alt="Card image cap" width="150"
+                        height="150">
+                    <div class="card-body">
+                        <p class="card-text" id="gld_dun03_2-time">8 horas</p>
+                        <input class="form-control time-input" type="time" id="gld_dun03_2-time-input">
+                        <button id="gld_dun03_2-btn" class="btn btn-success"
+                            onclick="regenerateTimer('gld_dun03_2')">Reiniciar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card">
+        <h5 class="card-title">Aprendiz</h5>
+        <img class="card-img-top" src="./resources/aprendiz.gif" alt="Card image cap width=" 150" height="150"">
+        <div class=" card-body">
+        <p class="card-text" id="aprendiz-time">3 horas</p>
+        <input class="form-control time-input" type="time" id="aprendiz-time-input">
+        <button id="aprendiz-btn" class="btn btn-success" onclick="regenerateTimer('\aprendiz')">Reiniciar</button>
+    </div>
+    </div>
+
 
 </body>
 <!-- JavaScript -->
