--- a/index.html
+++ b/index.html
@@ -214,6 +214,16 @@
                 <button id="gtb-btn" class="btn btn-success" onclick="regenerateTimer('\gtb')">Reiniciar</button>
             </div>
         </div>
+        <div class="card">
+            <h5 class="card-title">Bispo Decadente</h5>
+            <img class="card-img-top" src="./resources/bispo.gif" alt="Card image cap" width="150" height="150">
+            <div class="card-body">
+                <p class="card-text" id="bispo-time">1 horas</p>
+                <input class="form-control time-input" type="time" id="bispo-time-input">
+                <button id="bispo-btn" class="btn btn-success" onclick="regenerateTimer('\bispo')">Reiniciar</button>
+            </div>
+        </div>
+
 
 
 
