--- a/index.html
+++ b/index.html
@@ -218,12 +218,226 @@
             <h5 class="card-title">Bispo Decadente</h5>
             <img class="card-img-top" src="./resources/bispo.gif" alt="Card image cap" width="150" height="150">
             <div class="card-body">
-                <p class="card-text" id="bispo-time">1 horas</p>
+                <p class="card-text" id="bispo-time">2 horas</p>
                 <input class="form-control time-input" type="time" id="bispo-time-input">
                 <button id="bispo-btn" class="btn btn-success" onclick="regenerateTimer('\bispo')">Reiniciar</button>
             </div>
         </div>
+        <div class="card">
+            <h5 class="card-title">Boitatá</h5>
+            <img class="card-img-top" src="./resources/boitata.gif" alt="Card image cap" width="150" height="150">
+            <div class="card-body">
+                <p class="card-text" id="boitata-time">2 horas</p>
+                <input class="form-control time-input" type="time" id="boitata-time-input">
+                <button id="bispo-btn" class="btn btn-success" onclick="regenerateTimer('\boitata')">Reiniciar</button>
+            </div>
+        </div>
+        <div class="card">
+            <h5 class="card-title">Cavaleiro da Tempestade</h5>
+            <img class="card-img-top" src="./resources/sk.gif" alt="Card image cap" width="150" height="150">
+            <div class="card-body">
+                <p class="card-text" id="sk-time">1 horas</p>
+                <input class="form-control time-input" type="time" id="sk-time-input">
+                <button id="bispo-btn" class="btn btn-success" onclick="regenerateTimer('\sk')">Reiniciar</button>
+            </div>
+        </div>
+        <div class="card">
+            <h5 class="card-title">Detardeurus</h5>
+            <img class="card-img-top" src="./resources/detar.gif" alt="Card image cap" width="150" height="150">
+            <div class="card-body">
+                <p class="card-text" id="detar-time">3 horas</p>
+                <input class="form-control time-input" type="time" id="sk-time-input">
+                <button id="detar-btn" class="btn btn-success" onclick="regenerateTimer('\detar')">Reiniciar</button>
+            </div>
+        </div>
+        <div class="card">
+            <h5 class="card-title">Drácula</h5>
+            <img class="card-img-top" src="./resources/dracula.gif" alt="Card image cap" width="150" height="150">
+            <div class="card-body">
+                <p class="card-text" id="dracula-time">1 horas</p>
+                <input class="form-control time-input" type="time" id="dracula-time-input">
+                <button id="dracula-btn" class="btn btn-success" onclick="regenerateTimer('\dracula')">Reiniciar</button>
+            </div>
+        </div>
+        <div class="card">
+            <h5 class="card-title">Drake</h5>
+            <img class="card-img-top" src="./resources/drake.gif" alt="Card image cap" width="150" height="150">
+            <div class="card-body">
+                <p class="card-text" id="drake-time">2 horas</p>
+                <input class="form-control time-input" type="time" id="drake-time-input">
+                <button id="drake-btn" class="btn btn-success" onclick="regenerateTimer('\drake')">Reiniciar</button>
+            </div>
+        </div>
+        <div>
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <li class="nav-item">
+                    <a class="nav-link active" id="pay_fild10-tab" data-toggle="tab" href="#pay_fild10" role="tab" aria-controls="pay_fild10" aria-selected="true">pay_fild10</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="gld_dun01_2-tab" data-toggle="tab" href="#gld_dun01_2" role="tab" aria-controls="gld_dun01_2" aria-selected="false">gld_dun01_2</a>
+                </li>                               
+            </ul>
+            <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" id="pay_fild10" role="tabpanel" aria-labelledby="pay_fild10-tab">
+                    <div class="card">
+                        <h5 class="card-title">Eddgar</h5>
+                        <img class="card-img-top" src="./resources/edgar.gif" alt="Card image cap" width="150" height="150">
+                        <div class="card-body">
+                            <p class="card-text" id="pay_fild10-time">2 horas</p>
+                            <input class="form-control time-input" type="time" id="pay_fild10-time-input">
+                            <button id="pay_fild10-btn" class="btn btn-success" onclick="regenerateTimer('pay_fild10')">Reiniciar</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane fade" id="gld_dun01_2" role="tabpanel" aria-labelledby="gld_dun01_2-tab">
+                    <div class="card">
+                        <h5 class="card-title">Eddgar</h5>
+                        <img class="card-img-top" src="./resources/edgar.gif" alt="Card image cap" width="150" height="150">
+                        <div class="card-body">
+                            <p class="card-text" id="gld_dun01_2-time">8 horas</p>
+                            <input class="form-control time-input" type="time" id="gld_dun01_2-time-input">
+                            <button id="gld_dun01_2-btn" class="btn btn-success" onclick="regenerateTimer('gld_dun01_2')">Reiniciar</button>
+                        </div>
+                    </div>
+                </div>                                           
+            </div>
+        </div>
+        <div class="card">
+            <h5 class="card-title">Egnigem Cenia</h5>
+            <img class="card-img-top" src="./resources/cenia.gif" alt="Card image cap" width="150" height="150">
+            <div class="card-body">
+                <p class="card-text" id="cenia-time">12 horas</p>
+                <input class="form-control time-input" type="time" id="cenia-time-input">
+                <button id="cenia-btn" class="btn btn-success" onclick="regenerateTimer('\cenia')">Reiniciar</button>
+            </div>
+        </div>
+        <div class="card">
+            <h5 class="card-title">Faraó</h5>
+            <img class="card-img-top" src="./resources/farao.gif" alt="Card image cap" width="150" height="150">
+            <div class="card-body">
+                <p class="card-text" id="farao-time">1 horas</p>
+                <input class="form-control time-input" type="time" id="farao-time-input">
+                <button id="farao-btn" class="btn btn-success" onclick="regenerateTimer('\farao')">Reiniciar</button>
+            </div>
+        </div>
+        <div>
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <li class="nav-item">
+                    <a class="nav-link active" id="pay_dun04-tab" data-toggle="tab" href="#pay_dun04" role="tab" aria-controls="pay_dun04" aria-selected="true">pay_dun04</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="gld_dun01-tab" data-toggle="tab" href="#gld_dun01" role="tab" aria-controls="gld_dun01" aria-selected="false">gld_dun01</a>
+                </li>                               
+            </ul>
+            <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" id="pay_dun04" role="tabpanel" aria-labelledby="pay_dun04-tab">
+                    <div class="card">
+                        <h5 class="card-title">Flor do Luar</h5>
+                        <img class="card-img-top" src="./resources/flor.gif" alt="Card image cap" width="150" height="150">
+                        <div class="card-body">
+                            <p class="card-text" id="pay_dun04-time">1 horas</p>
+                            <input class="form-control time-input" type="time" id="pay_dun04-time-input">
+                            <button id="pay_dun04-btn" class="btn btn-success" onclick="regenerateTimer('pay_dun04')">Reiniciar</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane fade" id="gld_dun01" role="tabpanel" aria-labelledby="gld_dun01-tab">
+                    <div class="card">
+                        <h5 class="card-title">Flor do Luar</h5>
+                        <img class="card-img-top" src="./resources/flor.gif" alt="Card image cap" width="150" height="150">
+                        <div class="card-body">
+                            <p class="card-text" id="gld_dun01-time">8 horas</p>
+                            <input class="form-control time-input" type="time" id="gld_dun01-time-input">
+                            <button id="gld_dun01-btn" class="btn btn-success" onclick="regenerateTimer('gld_dun01')">Reiniciar</button>
+                        </div>
+                    </div>
+                </div>                                           
+            </div>
+        </div>
+        <div class="card">
+            <h5 class="card-title">Freeoni</h5>
+            <img class="card-img-top" src="./resources/freeoni.gif" alt="Card image cap" width="150" height="150">
+            <div class="card-body">
+                <p class="card-text" id="freeoni-time">2 horas</p>
+                <input class="form-control time-input" type="time" id="freeoni-time-input">
+                <button id="freeoni-btn" class="btn btn-success" onclick="regenerateTimer('\freeoni')">Reiniciar</button>
+            </div>
+        </div>
+        <div class="card">
+            <h5 class="card-title">General Daehyun</h5>
+            <img class="card-img-top" src="./resources/daehyun.gif" alt="Card image cap" width="150" height="150">
+            <div class="card-body">
+                <p class="card-text" id="daehyun-time">8 horas</p>
+                <input class="form-control time-input" type="time" id="daehyun-time-input">
+                <button id="daehyun-btn" class="btn btn-success" onclick="regenerateTimer('\daehyun')">Reiniciar</button>
+            </div>
+        </div>
+        <div class="card">
+            <h5 class="card-title">General Tartaruga</h5>
+            <img class="card-img-top" src="./resources/tartaruga.gif" alt="Card image cap" width="150" height="150">
+            <div class="card-body">
+                <p class="card-text" id="tartaruga-time">1 horas</p>
+                <input class="form-control time-input" type="time" id="tartaruga-time-input">
+                <button id="tartaruga-btn" class="btn btn-success" onclick="regenerateTimer('\tartaruga')">Reiniciar</button>
+            </div>
+        </div>
+        <div class="card">
+            <h5 class="card-title">Gioia</h5>
+            <img class="card-img-top" src="./resources/gioia.gif" alt="Card image cap" width="150" height="150">
+            <div class="card-body">
+                <p class="card-text" id="gioia-time">8 horas</p>
+                <input class="form-control time-input" type="time" id="gioia-time-input">
+                <button id="gioia-btn" class="btn btn-success" onclick="regenerateTimer('\gioia')">Reiniciar</button>
+            </div>
+        </div>
+        <div class="card">
+            <h5 class="card-title">Gorynych</h5>
+            <img class="card-img-top" src="./resources/gory.gif" alt="Card image cap" width="150" height="150">
+            <div class="card-body">
+                <p class="card-text" id="gory-time">2 horas</p>
+                <input class="form-control time-input" type="time" id="gory-time-input">
+                <button id="gory-btn" class="btn btn-success" onclick="regenerateTimer('\gory')">Reiniciar</button>
+            </div>
+        </div>
+        <div class="card">
+            <h5 class="card-title">Guardião Morto Kades</h5>
+            <img class="card-img-top" src="./resources/kades.gif" alt="Card image cap" width="150" height="150">
+            <div class="card-body">
+                <p class="card-text" id="kades-time">2 horas</p>
+                <input class="form-control time-input" type="time" id="kades-time-input">
+                <button id="kades-btn" class="btn btn-success" onclick="regenerateTimer('\kades')">Reiniciar</button>
+            </div>
+        </div>
+        <div class="card">
+            <h5 class="card-title">Ifrit</h5>
+            <img class="card-img-top" src="./resources/ifrit.gif" alt="Card image cap" width="150" height="150">
+            <div class="card-body">
+                <p class="card-text" id="ifrit-time">11 horas</p>
+                <input class="form-control time-input" type="time" id="ifrit-time-input">
+                <button id="ifrit-btn" class="btn btn-success" onclick="regenerateTimer('\ifrit')">Reiniciar</button>
+            </div>
+        </div>
+        <div class="card">
+            <h5 class="card-title">Kiel-D-01</h5>
+            <img class="card-img-top" src="./resources/kiel.gif" alt="Card image cap" width="150" height="150">
+            <div class="card-body">
+                <p class="card-text" id="kiel-time">11 horas</p>
+                <input class="form-control time-input" type="time" id="kiel-time-input">
+                <button id="kiel-btn" class="btn btn-success" onclick="regenerateTimer('\kiel')">Reiniciar</button>
+            </div>
+        </div>
+        <div class="card">
+            <h5 class="card-title">Kraken</h5>
+            <img class="card-img-top" src="./resources/kiel.gif" alt="Card image cap" width="150" height="150">
+            <div class="card-body">
+                <p class="card-text" id="kiel-time">2 horas</p>
+                <input class="form-control time-input" type="time" id="kiel-time-input">
+                <button id="kiel-btn" class="btn btn-success" onclick="regenerateTimer('\kiel')">Reiniciar</button>
+            </div>
+        </div>
 
+        
+        
 
 
 
