--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="pay_fild10" role="tabpanel" aria-labelledby="pay_fild10-tab">
                     <div class="card">
-                        <h5 class="card-title">Eddgar</h5>
+                        <h5 class="card-title">Eddga</h5>
                         <img class="card-img-top" src="./resources/edgar.gif" alt="Card image cap" width="150" height="150">
                         <div class="card-body">
                             <p class="card-text" id="pay_fild10-time">2 horas</p>
