--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <h5 class="card-title">Besouro-Ladrão Dourado</h5>
             <img class="card-img-top" src="./resources/gtb.gif" alt="Card image cap" width="150" height="150">
             <div class="card-body">
-                <p class="card-text" id="gtb-time">1 horas</p>
+                <p class="card-text" id="gtb-time">1 hora</p>
                 <input class="form-control time-input" type="time" id="gtb-time-input">
                 <button id="gtb-btn" class="btn btn-success" onclick="regenerateTimer('gtb')">Reiniciar</button>
             </div>
@@ -236,7 +236,7 @@
             <h5 class="card-title">Cavaleiro da Tempestade</h5>
             <img class="card-img-top" src="./resources/sk.gif" alt="Card image cap" width="150" height="150">
             <div class="card-body">
-                <p class="card-text" id="sk-time">1 horas</p>
+                <p class="card-text" id="sk-time">1 hora</p>
                 <input class="form-control time-input" type="time" id="sk-time-input">
                 <button id="bispo-btn" class="btn btn-success" onclick="regenerateTimer('sk')">Reiniciar</button>
             </div>
@@ -254,7 +254,7 @@
             <h5 class="card-title">Drácula</h5>
             <img class="card-img-top" src="./resources/dracula.gif" alt="Card image cap" width="150" height="150">
             <div class="card-body">
-                <p class="card-text" id="dracula-time">1 horas</p>
+                <p class="card-text" id="dracula-time">1 hora</p>
                 <input class="form-control time-input" type="time" id="dracula-time-input">
                 <button id="dracula-btn" class="btn btn-success" onclick="regenerateTimer('dracula')">Reiniciar</button>
             </div>
@@ -315,7 +315,7 @@
             <h5 class="card-title">Faraó</h5>
             <img class="card-img-top" src="./resources/farao.gif" alt="Card image cap" width="150" height="150">
             <div class="card-body">
-                <p class="card-text" id="farao-time">1 horas</p>
+                <p class="card-text" id="farao-time">1 hora</p>
                 <input class="form-control time-input" type="time" id="farao-time-input">
                 <button id="farao-btn" class="btn btn-success" onclick="regenerateTimer('farao')">Reiniciar</button>
             </div>
@@ -335,7 +335,7 @@
                         <h5 class="card-title">Flor do Luar</h5>
                         <img class="card-img-top" src="./resources/flor.gif" alt="Card image cap" width="150" height="150">
                         <div class="card-body">
-                            <p class="card-text" id="pay_dun04-time">1 horas</p>
+                            <p class="card-text" id="pay_dun04-time">1 hora</p>
                             <input class="form-control time-input" type="time" id="pay_dun04-time-input">
                             <button id="pay_dun04-btn" class="btn btn-success" onclick="regenerateTimer('pay_dun04')">Reiniciar</button>
                         </div>
@@ -376,7 +376,7 @@
             <h5 class="card-title">General Tartaruga</h5>
             <img class="card-img-top" src="./resources/tartaruga.gif" alt="Card image cap" width="150" height="150">
             <div class="card-body">
-                <p class="card-text" id="tartaruga-time">1 horas</p>
+                <p class="card-text" id="tartaruga-time">1 hora</p>
                 <input class="form-control time-input" type="time" id="tartaruga-time-input">
                 <button id="tartaruga-btn" class="btn btn-success" onclick="regenerateTimer('tartaruga')">Reiniciar</button>
             </div>
