favorites organization added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <!-- CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css" />
-
     <title>Timer MVP Ragnarok</title>
 </head>
 
@@ -20,7 +19,7 @@
             </div>
         </div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Ragnarok MVP Timer</a>
+            <a class="navbar-brand" href="#" onclick="reRender()">Ragnarok MVP Timer</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -28,14 +27,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#" onclick="reRender()">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <!--                     <li class="nav-item dropdown active">
+                    <li class="nav-item dropdown active">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Organizar por</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Ordem Alfabética</a>
+                            <a class="dropdown-item" href="#" onclick='showFavorites()'><i class="fas fa-star"></i> Favoritos</a>
                         </div>
-                    </li> -->
+                    </li>
                 </ul>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -54,6 +53,7 @@
 </script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
 </script>
+<script src="https://kit.fontawesome.com/85028750b6.js" crossorigin="anonymous"></script>
 <script src="./moment-with-locales.js"></script>
 <script src="./timer.js"></script>
 
