--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
                             <a class="dropdown-item" href="#" onclick='showFavorites()'><i class="fas fa-star"></i> Favoritos</a>
                         </div>
                     </li>
+                    <li class="nav-item dropdown active">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Opções</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#modalURL" id="modalGenerateButton">Gerar URL compartilhavel</a>
+                        </div>
+                    </li>
                 </ul>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -43,6 +49,31 @@
             </div>
         </nav>
         <div class="main-div">
+        </div>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="modalURL" tabindex="-1" role="dialog" aria-labelledby="modalURLLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalURLLabel">URL Compartilhavel</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+                </div>
+                <div class="modal-body">
+                    <div class="input-group input-group-sm mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="inputGroup-sizing-sm">URL</span>
+                        </div>
+                        <input type="text" class="form-control" id="textURL" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" onclick="copyURL()">Copiar URL</button>
+                </div>
+            </div>
         </div>
     </div>
 </body>
