--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <li class="nav-item dropdown active">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Opções</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#modalURL" id="modalGenerateButton">Gerar URL compartilhavel</a>
+                            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#modalURL" id="modalGenerateButton">Gerar URL compartilhável</a>
                         </div>
                     </li>
                 </ul>
@@ -56,7 +56,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modalURLLabel">URL Compartilhavel</h5>
+                    <h5 class="modal-title" id="modalURLLabel">URL Compartilhável</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
